# kudos

./: ChangeLog.md  README.md  default.nix  dependent.k  expression.k  expression1.k  kudos.cabal  refl.k  release.nix  shell.nix
app/: Main.hs
src/Kudos/: Config.hs  Error.hs  Normalizer.hs  Parser.hs  Pretty.hs  Syntax.hs  TypeChecker.hs
